--- a/resources/[FAROESTE]/[SYSTEM]/frp_clothes/client/html/style.css
+++ b/resources/[FAROESTE]/[SYSTEM]/frp_clothes/client/html/style.css
@@ -406,14 +406,14 @@ h6 {
 
 
 .confirm{
-    width:100%;
+    width:50%;
     height:30px;
     text-align: center;
 }
 
 .confirm-button{
     height: 25px;
-    width: 40%;
+    width: 60%;
     background: url('img/toast.png') !important;
     background-size: 100% 100%!important;
     transition: background-color .2s ease-out;
@@ -706,4 +706,9 @@ input[type='text']:-webkit-autofill, input[type='number']:-webkit-autofill
 {
     color: black !important;
     background-color: transparent !important;
+}
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
 }
