--- a/resources/[FAROESTE]/[COMPONENTES]/frp_newspaper/html/style.css
+++ b/resources/[FAROESTE]/[COMPONENTES]/frp_newspaper/html/style.css
@@ -7,19 +7,24 @@ body{
     overflow: hidden;
     background-image: url('BG.png');
     background-position: center;
-    background-size: 72% 84%;
+    background-size: 46% 110%;
     background-repeat: no-repeat;
 }
 
 .jornal{
-    width:68%;
-    height:80%;
+    width:100%;
+    height:100%;
     overflow: hidden;    
 }
+/* 
+.jornal .imagem{
+    position: absolute;
+} */
+
 .close {
     position: absolute;
-    right: 15%;
-    top:9%;
+    right: 28%;
+    top:2%;
 }
 
 .close img{
@@ -27,6 +32,32 @@ body{
     right:1px;
     width: 24px;
 }
+
+.next {
+    position: absolute;
+    right: 28%;
+    top:50%;
+}
+
+.next  img{
+    position: relative;
+    right:1px;
+    width: 24px;
+}
+
+.back {
+    position: absolute;
+    right: 70%;
+    top:50%;
+}
+
+.back  img{
+    position: relative;
+    right:1px;
+    width: 24px;
+    rotate: 180deg;
+}
+
 
 ::-webkit-scrollbar { 
     display: none;
