--- a/resources/[FAROESTE]/[SYSTEM]/frp_crafting/nui/style.css
+++ b/resources/[FAROESTE]/[SYSTEM]/frp_crafting/nui/style.css
@@ -63,7 +63,7 @@ body {
 .container .item-column {
     /* border: 1px solid orange; */
     position: relative;
-    height: 290px;
+    height: 225px;
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -138,12 +138,11 @@ body {
 }
 
 .container .bottom {
-    height: fit-content;
+    height: 13vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     margin: 15px 0px 15px 0px;
-    justify-content: center;
     align-items: center;
 }
 
@@ -259,3 +258,18 @@ body {
       transform: translate3d(-100%, 0, 0);
     }
   } */
+
+.bottom__item_description
+{
+    width: 70%;
+    text-align: center;
+}
+
+.bottom__item_description__text
+{
+    font-family: 'Hapna';
+
+    color: white;
+
+    font-size: 1.8vh;
+}
